--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==2.3.3
 colorama==0.4.1
 Django==2.2.7
+django-solo==1.1.3
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -12,3 +13,4 @@ sqlparse==0.3.0
 virtualenv==16.7.7
 virtualenvwrapper-win==1.2.5
 wrapt==1.11.2
+
