--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+asgiref==3.2.3
 astroid==2.3.3
 certifi==2019.11.28
 chardet==3.0.4
 colorama==0.4.1
 dj-database-url==0.5.0
 Django==3.0
+django-cleanup==4.0.0
 django-heroku==0.3.1
 django-solo==1.1.3
 django-storages==1.8
